# ml-bank-nbp-b2b

./: .cruft.json  .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
notebooks/: README.md
